--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,9 +12,9 @@ spring:
       ddl-auto: update
     show-sql: true
   rabbitmq:
-    host: 127.0.0.1
+    host: 94.74.123.183
     port: 5672
     username: guest
     password: guest
-    publisher-confirm-type: correlated  # NONE 禁用发布确认模式，是默认值， CORRELATED 发布消息成功到交换机后会触发回调方法 SIMPLE
-    publisher-returns: true # 回退消息
+#    publisher-confirm-type: correlated  # NONE 禁用发布确认模式，是默认值， CORRELATED 发布消息成功到交换机后会触发回调方法 SIMPLE
+#    publisher-returns: true # 回退消息
