--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,3 +18,21 @@ spring:
     password: guest
 #    publisher-confirm-type: correlated  # NONE 禁用发布确认模式，是默认值， CORRELATED 发布消息成功到交换机后会触发回调方法 SIMPLE
 #    publisher-returns: true # 回退消息
+
+xxl:
+  job:
+    accessToken:
+    admin:
+      # xxl-job后台管理界面的地址
+      addresses: http://94.74.123.183:8383/xxl-job-admin
+    executor:
+      # 此执行器的名称
+      appname: text-execute-job
+      address:
+      ip:
+      # 此执行器的端口
+      port: 9999
+      # 此执行器的日志存放路径
+      logpath:
+      # 此执行器的日志保存时间
+      logretentiondays: 30
