--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.8.0.M1</version>
+            <version>5.8.11</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
